# azure-ai-agent-service-mcp-bridge-2

./: .env.sample  .gitignore  IMPLEMENTATION.md  README.md  main.py  pyproject.toml  requirements.txt
azure_ai_mcp_bridge/: bridge.py  chat.py  mcp_integration.py
servers/: weather_server.py
